; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_bitmap.c_file_page_offset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_bitmap.c_file_page_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bitmap_storage = type { i64 }

@PAGE_BITS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.bitmap_storage*, i64)* @file_page_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @file_page_offset(%struct.bitmap_storage* %0, i64 %1) #0 {
  %3 = alloca %struct.bitmap_storage*, align 8
  %4 = alloca i64, align 8
  store %struct.bitmap_storage* %0, %struct.bitmap_storage** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.bitmap_storage*, %struct.bitmap_storage** %3, align 8
  %6 = getelementptr inbounds %struct.bitmap_storage, %struct.bitmap_storage* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i64, i64* %4, align 8
  %11 = add i64 %10, 32
  store i64 %11, i64* %4, align 8
  br label %12

12:                                               ; preds = %9, %2
  %13 = load i64, i64* %4, align 8
  %14 = load i32, i32* @PAGE_BITS, align 4
  %15 = sub nsw i32 %14, 1
  %16 = sext i32 %15 to i64
  %17 = and i64 %13, %16
  ret i64 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
